erDiagram
    %% Lookup Tables
    ROLES ||--o{ USERS : has
    CATEGORIES ||--o{ ASSETS : categorizes

    %% Infrastructure
    KIOSKS ||--o{ LOCKERS : contains
    LOCKERS ||--o{ ASSETS : currently_holds

    %% Transactions
    USERS ||--o{ LOANS : initiates
    ASSETS ||--o{ LOANS : is_part_of
    LOCKERS ||--o{ LOANS : checkout_location
    LOCKERS ||--o{ LOANS : return_location

    %% Analyses, Security & AI
    LOANS ||--o{ AI_EVALUATIONS : evaluated_by
    AI_EVALUATIONS ||--o{ DAMAGE_REPORTS : detects
    USERS ||--o{ AUDIT_LOGS : performs

    ROLES {
        uuid role_id PK
        varchar role_name UK
    }

    CATEGORIES {
        uuid category_id PK
        varchar category_name UK
    }

    USERS {
        uuid user_id PK
        uuid role_id FK
        varchar first_name
        varchar last_name
        varchar email UK
        varchar nfc_tag_id UK "Nullable: For onboarding"
        varchar pin_hash
        int failed_login_attempts "Anti-brute-force"
        timestamp locked_until "Lockout timer"
        enum status "ACTIVE, INACTIVE, BANNED, ANONYMIZED"
        varchar ban_reason "Nullable"
        boolean accepted_privacy_policy
    }

    KIOSKS {
        uuid kiosk_id PK
        varchar name
        varchar location_description
        enum kiosk_status "ONLINE, OFFLINE, MAINTENANCE"
    }

    LOCKERS {
        uuid locker_id PK
        uuid kiosk_id FK
        int logical_number "Physical number 1, 2, 3... (UK per kiosk: uq_kiosk_logical_number)"
        enum locker_status "AVAILABLE, OCCUPIED, MAINTENANCE, ERROR_OPEN"
    }

    ASSETS {
        uuid asset_id PK
        uuid category_id FK
        uuid locker_id FK "Nullable: NULL when on loan or in inspection"
        varchar name
        varchar aztec_code UK
        enum asset_status "AVAILABLE, BORROWED, RESERVED, PENDING_INSPECTION, MAINTENANCE, LOST"
        boolean is_deleted
    }

    LOANS {
        uuid loan_id PK
        uuid user_id FK
        uuid asset_id FK
        uuid checkout_locker_id FK
        uuid return_locker_id FK "Nullable: Until item is returned"
        timestamp reserved_at "Nullable"
        timestamp borrowed_at "Nullable"
        timestamp due_date "Nullable"
        timestamp returned_at "Nullable"
        timestamp updated_at "System set on every change"
        enum loan_status "RESERVED, ACTIVE, RETURNING, OVERDUE, COMPLETED, FRAUD_SUSPECTED, DISPUTED, PENDING_INSPECTION"
    }
    %% (*) RETURNING is a pre-vision mutex set by POST /api/v1/loans/return/initiate.
    %%     It prevents duplicate return initiations and is enforced by POST /api/v1/vision/analyze
    %%     (409 if loan_status != RETURNING for a RETURN evaluation).

    AI_EVALUATIONS {
        uuid evaluation_id PK
        uuid loan_id FK
        enum evaluation_type "CHECKOUT, RETURN"
        varchar photo_url
        float ai_confidence "NOT NULL: 0.0 when no detections"
        jsonb detected_objects "E.g. detections list with bounding boxes"
        boolean has_damage_detected "Quickly filter problem evaluations"
        varchar model_version "NOT NULL: e.g. 'yolo26-dual-model'"
        boolean is_approved "Nullable: set by admin judge endpoint"
        varchar rejection_reason "Nullable: admin note when is_approved=false"
        timestamp analyzed_at
    }

    DAMAGE_REPORTS {
        uuid damage_id PK
        uuid evaluation_id FK
        varchar damage_type "E.g. scratch, crack, missing key"
        varchar severity "Free-form string"
        jsonb segmentation_data "YOLO polygon/bounding box coordinates"
        boolean requires_repair
    }

    AUDIT_LOGS {
        uuid audit_id PK
        uuid user_id FK "Nullable: For anonymous errors"
        varchar action_type "LOGIN_SUCCESS, LOGIN_FAILED, USER_ANONYMIZED, USER_STATUS_CHANGED, EVALUATION_APPROVED, EVALUATION_REJECTED, VISION_EVALUATION_PROCESSED, VISION_EVALUATION_FAILED, ADMIN_FORCED_OPEN, ASSET_SOFT_DELETED, LOAN_RESERVED_TIMEOUT, LOAN_OVERDUE, LOAN_CHECKOUT_INITIATED, LOAN_CHECKOUT_CONFIRMED, LOAN_CHECKOUT_FRAUD, LOAN_RETURN_INITIATED, LOAN_RETURN_CONFIRMED, ASSET_CREATED, ASSET_STATUS_CHANGED, USER_PIN_CHANGED, USER_NFC_ASSIGNED, LOCKER_STATUS_CHANGED, KIOSK_STATUS_CHANGED"
        jsonb payload
        varchar(64) previous_hash "NOT NULL: SHA-256 hex of predecessor"
        varchar(64) current_hash "NOT NULL: SHA-256 hex of this record"
        timestamp created_at
    }
